--- a/01-acm-policies/advanced-cluster-security/acs-central-policy/acs-central-policy.yaml
+++ b/01-acm-policies/advanced-cluster-security/acs-central-policy/acs-central-policy.yaml
@@ -204,7 +204,7 @@ spec:
                 template:
                   spec:
                     containers:
-                      - image: quay.io/pittar/acs-deploy-bundle-job:latest
+                      - image: quay.io/pittar/acs-deploy-bundle-job:new-acm-process
                         env:
                         - name: PASSWORD
                           valueFrom:
