--- a/02-acm-applications/petclinic-dev/petclinic-dev-application.yaml
+++ b/02-acm-applications/petclinic-dev/petclinic-dev-application.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1                    
 kind: Namespace
 metadata:
-  name: application-petclinic-dev                             
+  name: petclinic-dev                             
 ---
 apiVersion: v1                    
 kind: Namespace
@@ -12,7 +12,7 @@ apiVersion: app.k8s.io/v1beta1
 kind: Application
 metadata:
   name: petclinic-dev
-  namespace: application-petclinic-dev
+  namespace: petclinic-dev
 spec:
   componentKinds:
   - group: apps.open-cluster-management.io
@@ -46,7 +46,7 @@ metadata:
   labels:
     app: petclinic-dev
   name: petclinic-dev-subscription
-  namespace: application-petclinic-dev
+  namespace: petclinic-dev
 spec:
   channel: channel-petclinic-dev/petclinic-dev
   placement:
@@ -60,7 +60,7 @@ metadata:
   labels:
     app: petclinic-dev
   name: petclinic-dev-placement
-  namespace: application-petclinic-dev
+  namespace: petclinic-dev
 spec:
   clusterSelector:
     matchLabels:
