--- a/02-acm-applications/petclinic-prod/petclinic-prod-application.yaml
+++ b/02-acm-applications/petclinic-prod/petclinic-prod-application.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1                    
 kind: Namespace
 metadata:
-  name: application-petclinic-prod                             
+  name: petclinic-prod                             
 ---
 apiVersion: v1                    
 kind: Namespace
@@ -12,7 +12,7 @@ apiVersion: app.k8s.io/v1beta1
 kind: Application
 metadata:
   name: petclinic-prod
-  namespace: application-petclinic-prod
+  namespace: petclinic-prod
 spec:
   componentKinds:
   - group: apps.open-cluster-management.io
@@ -46,7 +46,7 @@ metadata:
   labels:
     app: petclinic-prod
   name: petclinic-prod-subscription
-  namespace: application-petclinic-prod
+  namespace: petclinic-prod
 spec:
   channel: channel-petclinic-prod/petclinic-prod
   placement:
@@ -60,7 +60,7 @@ metadata:
   labels:
     app: petclinic-prod
   name: petclinic-prod-placement
-  namespace: application-petclinic-prod
+  namespace: petclinic-prod
 spec:
   clusterSelector:
     matchLabels:
