--- a/02-acm-applications/petclinic-test/petclinic-test-application.yaml
+++ b/02-acm-applications/petclinic-test/petclinic-test-application.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1                    
 kind: Namespace
 metadata:
-  name: application-petclinic-test                             
+  name: petclinic-test                             
 ---
 apiVersion: v1                    
 kind: Namespace
@@ -12,7 +12,7 @@ apiVersion: app.k8s.io/v1beta1
 kind: Application
 metadata:
   name: petclinic-test
-  namespace: application-petclinic-test
+  namespace: petclinic-test
 spec:
   componentKinds:
   - group: apps.open-cluster-management.io
@@ -46,7 +46,7 @@ metadata:
   labels:
     app: petclinic-test
   name: petclinic-test-subscription
-  namespace: application-petclinic-test
+  namespace: petclinic-test
 spec:
   channel: channel-petclinic-test/petclinic-test
   placement:
@@ -60,7 +60,7 @@ metadata:
   labels:
     app: petclinic-test
   name: petclinic-test-placement
-  namespace: application-petclinic-test
+  namespace: petclinic-test
 spec:
   clusterSelector:
     matchLabels:
