--- a/01-acm-policies/advanced-cluster-security/acs-securedcluster-policy/acs-securedcluster-policy.yaml
+++ b/01-acm-policies/advanced-cluster-security/acs-securedcluster-policy/acs-securedcluster-policy.yaml
@@ -75,11 +75,11 @@ spec:
                 name: stackrox-secured-cluster-services
               spec:
                 clusterName: |
-                  {{ fromSecret "open-cluster-management-agent" "hub-kubeconfig-secret" "cluster-name" | base64dec }}
+                  {{hub fromSecret "open-cluster-management-agent" "hub-kubeconfig-secret" "cluster-name" | base64dec hub}}
                 auditLogs:
                   collection: Auto
                 centralEndpoint: |
-                  {{ fromSecret "stackrox" "sensor-tls" "acs-host" | base64dec }}
+                  {{hub fromSecret "stackrox" "sensor-tls" "acs-host" | base64dec hub}}
                 admissionControl:
                   listenOnCreates: false
                   listenOnEvents: true
