--- a/01-acm-policies/kustomization.yaml
+++ b/01-acm-policies/kustomization.yaml
@@ -1,9 +1,14 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
+namespace: acm-custom-policies
+
 bases:
   - acm-observability
   - advanced-cluster-security
   - compliance-operator
   - odf-object-storage
   - openshift-oauth
+
+resources:
+  - namespace.yaml
