--- a/01-acm-policies/compliance-operator/kustomization.yaml
+++ b/01-acm-policies/compliance-operator/kustomization.yaml
@@ -1,6 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
+namespace: acm-custom-policies
+
 bases:
   - operator-policy
   - scan-nist-800-53-policy
