Fix acs policy.

--- a/01-acm-policies/advanced-cluster-security/acs-central-policy/acs-central-policy.yaml
+++ b/01-acm-policies/advanced-cluster-security/acs-central-policy/acs-central-policy.yaml
@@ -253,6 +253,7 @@ spec:
         object-templates:
           - complianceType: musthave
             objectDefinition:
+              apiVersion: v1
               kind: ConfigMap
               metadata:
                 name: central-info
